--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "electron": "32.1.2",
+    "electron": "^32.1.2",
     "standard": "^17.1.2"
   },
   "eslintConfig": {
