--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   },
   "eslintConfig": {
     "extends": "standard"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "install": "^0.13.0",
+    "mysql2": "^3.11.3",
+    "npm": "^10.8.3",
+    "sweetalert2": "^11.14.1"
   }
 }
