--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "electron-store": "^10.0.0",
     "install": "^0.13.0",
     "mysql2": "^3.11.3",
     "npm": "^10.8.3",
