--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "electron": "^32.3.3",
     "standard": "^17.1.2"
@@ -27,5 +26,6 @@
     "pdfkit": "^0.13.0",
     "pdfkit-table": "^0.1.99",
     "sweetalert2": "^11.14.1"
-  }
+  },
+  "description": ""
 }
