--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "main": "index.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "electron-builder"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/globals": "^30.0.0-beta.3",
     "electron": "^32.3.3",
     "electron-builder": "^26.0.12",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "jsdom": "^26.1.0",
     "standard": "^17.1.2"
   },
   "eslintConfig": {
@@ -27,7 +31,7 @@
     "npm": "^10.8.3",
     "pdfkit": "^0.13.0",
     "pdfkit-table": "^0.1.99",
-    "sweetalert2": "^11.14.1"
+    "sweetalert2": "^11.22.0"
   },
   "description": "",
   "build": {
