--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,9 +5,10 @@ on:
   push:
     branches:
       - DEV-QA
-  pull_request:
-    branches:
-      - DEV-QA
+
+permissions:
+  contents: write # Necesario para realizar el merge
+  pull-requests: write # Necesario para crear y fusionar PRs
 
 jobs:
   test:
@@ -49,4 +50,44 @@ jobs:
         with:
           name: jest-test-results
           path: test-results/jest-results.json
+
+  merge-to-main:
+    runs-on: ubuntu-latest
+    needs: test # Depende de que el trabajo 'test' sea exitoso
+    if: github.event_name == 'push' && github.ref == 'refs/heads/DEV-QA' # Solo para push en DEV-QA
+
+    steps:
+      # Clona el repositorio con historial completo
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Necesario para trabajar con el historial de git
+
+      # Configura git
+      - name: Set up git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      # Cambia a la rama main y hace merge de DEV-QA
+      - name: Merge DEV-QA to main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git checkout main
+          git merge origin/DEV-QA --no-ff --message "Auto-merge DEV-QA to main after successful tests"
+          git push origin main
+        continue-on-error: true # Continúa incluso si hay conflictos
+
+      # Crea un PR si el merge falla (por ejemplo, por conflictos)
+      - name: Create Pull Request
+        if: failure() # Ejecuta solo si el merge falla
+        uses: peter-evans/create-pull-request@v7
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "Auto-merge DEV-QA to main"
+          title: "Auto-merge DEV-QA to main after successful tests"
+          body: "This PR was automatically created to merge DEV-QA into main after successful CI tests. Please resolve any conflicts."
+          branch: DEV-QA
+          base: main
 ```
