--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,3 +89,30 @@ jobs:
           body: "This PR was automatically created to merge DEV-QA into main after successful CI tests. Please resolve any conflicts."
           branch: DEV-QA
           base: main
+  send-email:
+    runs-on: ubuntu-latest
+    needs: [test, merge-to-main] # Depende de ambos jobs
+    if: always() && !cancelled() # Ejecuta siempre, excepto si el flujo es cancelado
+
+    steps:
+      - name: Send email notification
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.SMTP_USER }}
+          password: ${{ secrets.SMTP_PASSWORD }}
+          subject: "CI Pipeline for SIGESA: ${{ job.status == 'success' && 'SUCCESS' || 'FAILURE' }}"
+          to: jeycobbarrientosgarcia@gmail.com
+          from: SIGESA CI Pipeline <${{ secrets.SMTP_USER }}>
+          body: |
+            Pipeline execution completed for SIGESA.
+            
+            Status: ${{ job.status == 'success' && 'SUCCESS' || 'FAILURE' }}
+            Branch: DEV-QA
+            Commit: ${{ github.sha }}
+            Triggered by: ${{ github.actor }}
+            Run URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            
+            Check the GitHub Actions logs for details.
+          secure: true
