--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,43 +6,32 @@ on:
       - DEV-QA
 
 permissions:
-  contents: write # Necesario para realizar el merge
-  pull-requests: write # Necesario para crear y fusionar PRs
+  contents: write
+  pull-requests: write
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      # Clona el repositorio
       - name: Checkout code
         uses: actions/checkout@v4
-
-      # Configura Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20' # Ajusta según la versión de Node.js que uses
-
-      # Instala dependencias
+          node-version: '20'
       - name: Install dependencies
         run: npm install
-
-      # Ejecuta pruebas de Jest
       - name: Run Jest tests
         run: npm test
         env:
-          CI: true # Habilita el modo CI para Jest
-
-      # Guarda los resultados de las pruebas
+          CI: true
       - name: Archive test results
-        if: always() # Ejecuta incluso si las pruebas fallan
+        if: always()
         run: |
           mkdir -p test-results
           npm test -- --json --outputFile=test-results/jest-results.json
         continue-on-error: true
-
-      # Sube los resultados como artefacto
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
@@ -52,23 +41,18 @@ jobs:
 
   merge-to-main:
     runs-on: ubuntu-latest
-    needs: test # Depende de que el trabajo 'test' sea exitoso
-    if: github.event_name == 'push' && github.ref == 'refs/heads/DEV-QA' # Solo para push en DEV-QA
+    needs: test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/DEV-QA'
 
     steps:
-      # Clona el repositorio con historial completo
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Necesario para trabajar con el historial de git
-
-      # Configura git
+          fetch-depth: 0
       - name: Set up git
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-
-      # Cambia a la rama main y hace merge de DEV-QA
       - name: Merge DEV-QA to main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -76,11 +60,9 @@ jobs:
           git checkout main
           git merge origin/DEV-QA --no-ff --message "Auto-merge DEV-QA to main after successful tests"
           git push origin main
-        continue-on-error: true # Continúa incluso si hay conflictos
-
-      # Crea un PR si el merge falla (por ejemplo, por conflictos)
+        continue-on-error: true
       - name: Create Pull Request
-        if: failure() # Ejecuta solo si el merge falla
+        if: failure()
         uses: peter-evans/create-pull-request@v7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -89,17 +71,18 @@ jobs:
           body: "This PR was automatically created to merge DEV-QA into main after successful CI tests. Please resolve any conflicts."
           branch: DEV-QA
           base: main
+
   send-email:
     runs-on: ubuntu-latest
-    needs: [test, merge-to-main] # Depende de ambos jobs
-    if: always() && !cancelled() # Ejecuta siempre, excepto si el flujo es cancelado
+    needs: [test, merge-to-main]
+    if: always() && !cancelled()
 
     steps:
       - name: Send email notification
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
-          server_port: 465
+          server_port: 587
           username: ${{ secrets.SMTP_USER }}
           password: ${{ secrets.SMTP_PASSWORD }}
           subject: "CI Pipeline for SIGESA: ${{ job.status == 'success' && 'SUCCESS' || 'FAILURE' }}"
@@ -115,4 +98,4 @@ jobs:
             Run URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
             
             Check the GitHub Actions logs for details.
-          secure: true
+          secure: false
